--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,7 @@
 body {
   color: white;
   font-family: "GT Eesti Text Trial Rg";
+
 }
 
 @layer utilities {
@@ -48,12 +49,12 @@ body {
   }
 }
 
-.hero{
-  background: url(/herobg2.png);
+/* .hero{
+  background: url(/event-gallery/IMG_6489.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-}
+} */
 .hero h1{
   font-family: "Life";
 }
@@ -91,4 +92,15 @@ body {
 
 .noise-bg {
   background: white url("https://i.pinimg.com/originals/5a/93/4e/5a934e84f67d2a61a118ec95b1d6cb74.gif") left top/1.8% 1.8% repeat;
+}
+
+.btn{
+  @apply bg-amber-600 text-white px-8 py-2 rounded-full mt-8 inline-block w-max;
+}
+
+body {
+  background-size: 70px 70px;
+  background-image:
+    linear-gradient(to right, rgba(128, 128, 128, 0.25) 1px, transparent 1px),
+    linear-gradient(to bottom, rgba(128, 128, 128, 0.25) 1px, transparent 1px);
 }
